log
Fri 15 Sep 2023 07:47:28 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c:49:1: error: expected identifier or ‘(’ before ‘}’ token
   49 | }
      | ^
Compilation failed
d850e24
Fri 15 Sep 2023 07:47:51 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
3e6d378
Fri 15 Sep 2023 07:52:08 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:92:1: error: expected ‘;’ before ‘}’ token
   92 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606: error: control reaches end of non-void function [-Werror=return-type]
  606 | }
      | 
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
b8bcda5
Fri 15 Sep 2023 07:52:27 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606: error: control reaches end of non-void function [-Werror=return-type]
  606 | }
      | 
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ffcfbed
Fri 15 Sep 2023 07:53:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:59: error: expected ‘;’ before ‘{’ token
   86 |         } else (tree->lower_than(key, current->pair->key)) {
      |                                                           ^~
      |                                                           ;
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606: error: control reaches end of non-void function [-Werror=return-type]
  606 | }
      | 
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a723de9
Fri 15 Sep 2023 07:59:12 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
012b1f1
Fri 15 Sep 2023 08:02:22 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  11|6
total_score: 15/70
0069257
Fri 15 Sep 2023 08:10:23 PM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  13|5
total_score: 25/70
26b59f5
Fri 15 Sep 2023 08:12:04 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
5684ef9
Fri 15 Sep 2023 08:17:49 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0f976e1
Fri 15 Sep 2023 08:21:03 PM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
4c8f720
Fri 15 Sep 2023 08:22:52 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:135:36: error: expected ‘;’ before ‘}’ token
  135 |         removeNode(tree, successor)
      |                                    ^
      |                                    ;
  136 |     }
      |     ~                               
Compilation failed
c2b59ca
Fri 15 Sep 2023 08:23:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f80c9d3
Fri 15 Sep 2023 08:24:42 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
528dc82
Fri 15 Sep 2023 08:28:38 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
45903d4
Fri 15 Sep 2023 08:34:16 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
75ad796
Fri 15 Sep 2023 08:38:01 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
ec0afa5
Fri 15 Sep 2023 08:40:34 PM UTC: 
 treemap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘eraseTreeMap’:
treemap.c:146:22: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
  146 |     TreeNode* node = searchTreeMap(tree, key);
      |                      ^~~~~~~~~~~~~
treemap.c: At top level:
treemap.c:162:1: error: expected identifier or ‘(’ before ‘}’ token
  162 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
aed000c
Fri 15 Sep 2023 08:40:41 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘eraseTreeMap’:
treemap.c:146:22: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
  146 |     TreeNode* node = searchTreeMap(tree, key);
      |                      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ec3b2ec
Fri 15 Sep 2023 08:42:13 PM UTC: 
 treemap.c | 27 ++++++---------------------
 1 file changed, 6 insertions(+), 21 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘eraseTreeMap’:
treemap.c:142:22: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
  142 |     TreeNode* node = searchTreeMap(tree, key);
      |                      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a18c0ff
Fri 15 Sep 2023 08:44:16 PM UTC: 
 treemap.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘eraseTreeMap’:
treemap.c:151:22: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
  151 |     TreeNode* node = searchTreeMap(tree, key);
      |                      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4249638
Fri 15 Sep 2023 08:45:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘eraseTreeMap’:
treemap.c:151:22: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
  151 |     TreeNode* node = searchTreeMap(tree, key);
      |                      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f773740
Fri 15 Sep 2023 08:46:19 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘eraseTreeMap’:
treemap.c:153:14: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
  153 |         node = searchTreeMap(tree, key);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
2aad340
Fri 15 Sep 2023 08:47:43 PM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘eraseTreeMap’:
treemap.c:151:22: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
  151 |     TreeNode* node = searchTreeMap(tree, key);
      |                      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8f7e095
Fri 15 Sep 2023 08:49:40 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘eraseTreeMap’:
treemap.c:150:22: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
  150 |     TreeNode* node = searchTreeMap(tree, key);
      |                      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
14e3b72
